// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a table with buttons 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerButtonCell headerCell"
        >
          <span>
            <span
              aria-label="fa-pencil"
              class="fa fa-pencil"
            />
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="buttonCell cell"
        >
          <div
            class="cellContent"
          >
            <button>
              <span
                aria-label="fa-pencil"
                class="fa fa-pencil"
              />
            </button>
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render an empty table 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
  <div
    class="tablePlaceholderArea"
  >
    <span
      aria-label="su-battery-low"
      class="tablePlaceholderIcon su-battery-low"
    />
    <div
      class="tablePlaceholderText"
    >
      No entries
    </div>
  </div>
</div>
`;

exports[`Render the Table component 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render the Table component in multiple selection mode 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell"
        >
          <span>
            <label
              class="label"
            >
              <span
                class="switch checkbox light"
              >
                <input
                  type="checkbox"
                />
                <span />
              </span>
            </label>
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell small"
        >
          <div
            class="cellContent"
          >
            <label
              class="label"
            >
              <span
                class="switch checkbox dark"
              >
                <input
                  type="checkbox"
                  value="0"
                />
                <span />
              </span>
            </label>
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render the Table component in single selection mode 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell"
        >
          <span />
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell small"
        >
          <div
            class="cellContent"
          >
            <label
              class="label"
            >
              <span
                class="switch radio dark"
              >
                <input
                  type="radio"
                  value="0"
                />
                <span />
              </span>
            </label>
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
